--- a/container_lipg.html
+++ b/container_lipg.html
@@ -90,6 +90,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li role="presentation" class="active"><a href="container_lipg.html">Lips Gloss</a></li>
                 <li role="presentation"><a href="container_mas.html">Mascara</a></li>
                <li role="presentation"><a href="container_pen.html">Pen</a></li>
+               <li role="presentation"><a href="container_pale.html">Palette</a></li>
+               <li role="presentation"><a href="container_pap.html">Paper</a></li>
             </ul>
         </div>
     <!--產品-->
