--- a/twcontainer_pow.html
+++ b/twcontainer_pow.html
@@ -90,6 +90,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li role="presentation"><a href="twcontainer_lipg.html">唇彩瓶</a></li>
                 <li role="presentation"><a href="twcontainer_mas.html">睫毛膏瓶</a></li>
                <li role="presentation"><a href="twcontainer_pen.html">筆類</a></li>
+                <li role="presentation"><a href="container_pale.html">盤狀</a></li>
+               <li role="presentation"><a href="container_pap.html">紙製品</a></li>
             </ul>
         </div>
     <!--產品-->
